CHANGES IN VERSION 2.99.2
------------------------
 o bitr_kegg function <2016-05-03, Tue>
 
CHANGES IN VERSION 2.99.1
------------------------
 o go2ont function <2016-04-28, Thu>
   + https://www.biostars.org/p/188863/
 o go2term function <2016-04-21, Thu>
 o export buildGOmap <2016-04-08, Fri>
 o fixed enrichDAVID according to https://support.bioconductor.org/p/72188/ <2016-04-08, Fri>
 
CHANGES IN VERSION 2.99.0
------------------------
 o version bump, ready to release version 3. <2016-03-29, Tue>
   + KEGG pathway and module support all species listed in KEGG website.
   + GO supports all species that have OrgDb which can be accessed online by AnnotationHub
   + User's defined/customized annotation is supported via enricher & GSEA
   
CHANGES IN VERSION 2.5.6
------------------------
 o write my own code to parse KEGG REST instead of using KEGGREST package <2016-03-10, Thu>
   + due to the issue of KEGGREST can't work with network of HTTP proxy with password
   + see: http://guangchuangyu.github.io/2015/02/kegg-enrichment-analysis-with-latest-online-data-using-clusterprofiler/#comment-2561443364

CHANGES IN VERSION 2.5.5
------------------------
 o maxGSSize paramter <2016-03-9, Wed>
 o update show method of compareClusterResult <2016-03-06, Sun> 
 o fixed R check <2016-03-06, Sun>
 o update ReactomePA citation info <2016-02-17, Wed>

CHANGES IN VERSION 2.5.4
------------------------
 o add use_internal_data=FALSE parameter in gseKEGG <2016-01-19, Tue>
 o fixed bug in simplify for organism extracted from OrgDb is not consistent to GOSemSim. <2016-01-05, Tue>
 o update vignette <2015-12-29, Tue>
 o re-designed internal function <2015-12-20, Sun>
 
CHANGES IN VERSION 2.5.3
------------------------
 o enrichMKEGG and gseMKEGG functions to support enrichment analysis of KEGG Module <2015-12-03, Thu>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/37
 
CHANGES IN VERSION 2.5.2
------------------------